# kasirgo

./: .env.example  .gitattributes  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  Plan.md  README.md  SECURITY.md  SESSION_HANDOFF.txt  benchmark.html  build.js  config.js  dashboard.html  index.html  kasir.wasm  login.html  package.json  railway.json  script.js  sync-gh.sh
assets/: AuthShell-DJT0TiRE.js  Dashboard-BTA-5daf.js  Kasir-ClDMEMEr.js  Landing-Bh7el0nl.js  Login-ZSCmcQCl.js  ResetPassword-C54-3TCK.js  VerifyEmail-CgUfxF0i.js  auth-N9s2Q-I6.js  core-CK5--v-r.js  index-BEhtTAIH.js  index-Kokvtm8J.css  swal-COyVi_qP.js  theme-DAK4Spsc.js
backend/: cache.ts  db.ts  helpers.ts  mail.ts  router.ts  server.ts
backend/routes/: alerts.ts  audit.ts  auth.ts  produk.ts  toko.ts  transaksi.ts  users.ts  wallet.ts
frontend/: .env.example  .env.gh-pages  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: kasir.wasm
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: AuthShell.tsx  RevenueChart.tsx  WalletCard.tsx  ui.tsx
frontend/src/lib/: animations.ts  api.ts  auth.ts  desktop.ts  format.ts  session-timeout.ts  swal.ts  theme.ts  toast.ts  usePolling.ts  util.ts  wasm.ts
frontend/src/pages/: Dashboard.tsx  (+5 more)
scripts/: tauri.sh
shared/: db-schema.sql  types.ts  validation.ts  wasm-bridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sql/: seed.sql
src-tauri/src/: lib.rs  main.rs
styles/: style.css
zig/: build.zig  main.zig
(+25 files in other folders)
