[package]
name = "kasirgo-desktop"
version = "1.0.0"
description = "KasirGo — POS Desktop (Tauri v2)"
authors = ["El"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "kasirgo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# default = ["custom-protocol"]  # production build (use dist/ instead of devUrl)
